--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".di.MyApp"
@@ -16,6 +16,10 @@
         android:theme="@style/Theme.DigiDokan"
         tools:targetApi="31">
         <activity
+            android:theme="@style/Theme.DigiDokan.App.Bar"
+            android:name=".views.dashboard.seller.SellerDashboard"
+            android:exported="false" />
+        <activity
             android:name=".views.starter.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -24,6 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
